# crust-trust

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  test.py
src/: main.rs
